--- a/pages/index.html
+++ b/pages/index.html
@@ -68,10 +68,6 @@
         model="https://d1a370nemizbjq.cloudfront.net/c2933994-e012-4be8-ba53-bdb833e23b3e.glb"
         templates.main.params.fill-screen="true"
       ></babylon>
-      <!-- <babylon
-        model="./models/READYPLAYERME_AVATAR.glb"
-        templates.main.params.fill-screen="true"
-      ></babylon> -->
     </div>
     <script>
       const canvas = document.getElementById("renderCanvas"); // GET THE CANVAS ELEMENT
@@ -99,6 +95,22 @@
           "village.glb"
         );
 
+        // COLLISION
+        const wireMat = new BABYLON.StandardMaterial("wireMat");
+        wireMat.wireframe = true;
+
+        const hitBox = BABYLON.MeshBuilder.CreateBox("carbox", {
+          width: 0.5,
+          height: 0.6,
+          depth: 4.5,
+        });
+        hitBox.material = wireMat;
+        hitBox.position.x = 3.1;
+        hitBox.position.y = 0.3;
+        hitBox.position.z = -5;
+
+        let carReady = false;
+
         // CAR
         BABYLON.SceneLoader.ImportMeshAsync(
           "",
@@ -106,6 +118,7 @@
           "car.glb"
         ).then(() => {
           const car = scene.getMeshByName("car");
+          carReady = true;
           car.rotation = new BABYLON.Vector3(Math.PI / 2, 0, -Math.PI / 2);
           car.position.y = 0.16;
           car.position.x = -3;
@@ -162,15 +175,8 @@
         };
 
         const track = [];
-        track.push(new walk(86, 7));
-        track.push(new walk(-85, 14.8));
-        track.push(new walk(-93, 16.5));
-        track.push(new walk(48, 25.5));
-        track.push(new walk(-112, 30.5));
-        track.push(new walk(-72, 33.2));
-        track.push(new walk(42, 37.5));
-        track.push(new walk(-98, 45.2));
-        track.push(new walk(0, 47));
+        track.push(new walk(180, 2.5));
+        track.push(new walk(0, 5));
 
         // DUDE
         BABYLON.SceneLoader.ImportMeshAsync(
@@ -182,10 +188,10 @@
           const dude = result.meshes[0];
           dude.scaling = new BABYLON.Vector3(0.008, 0.008, 0.008);
 
-          dude.position = new BABYLON.Vector3(-6, 0, 0);
+          dude.position = new BABYLON.Vector3(1.5, 0, -6.9);
           dude.rotate(
             BABYLON.Axis.Y,
-            BABYLON.Tools.ToRadians(-95),
+            BABYLON.Tools.ToRadians(-90),
             BABYLON.Space.LOCAL
           );
           const startRotation = dude.rotationQuaternion.clone();
@@ -197,58 +203,36 @@
           let p = 0;
 
           scene.onBeforeRenderObservable.add(() => {
-            dude.movePOV(0, 0, step);
-            distance += step;
+            if (carReady) {
+              if (carReady) {
+                if (
+                  !dude.getChildren()[1].intersectsMesh(hitBox) &&
+                  scene.getMeshByName("car").intersectsMesh(hitBox)
+                ) {
+                  return;
+                }
+              }
+              dude.movePOV(0, 0, step);
+              distance += step;
 
-            if (distance > track[p].dist) {
-              dude.rotate(
-                BABYLON.Axis.Y,
-                BABYLON.Tools.ToRadians(track[p].turn),
-                BABYLON.Space.LOCAL
-              );
-              p += 1;
-              p %= track.length;
-              if (p === 0) {
-                distance = 0;
-                dude.position = new BABYLON.Vector3(-6, 0, 0);
-                dude.rotationQuaternion = startRotation.clone();
+              if (distance > track[p].dist) {
+                dude.rotate(
+                  BABYLON.Axis.Y,
+                  BABYLON.Tools.ToRadians(track[p].turn),
+                  BABYLON.Space.LOCAL
+                );
+                p += 1;
+                p %= track.length;
+                if (p === 0) {
+                  distance = 0;
+                  dude.position = new BABYLON.Vector3(1.5, 0, -6.9);
+                  dude.rotationQuaternion = startRotation.clone();
+                }
               }
             }
           });
         });
 
-        // AVATAR
-        // var avatar = BABYLON.SceneLoader.Append("../models/", "READYPLAYERME_AVATAR.gbl", scene, function(meshes){
-        //   scene.createDefaultCameraOrLight(true, true, true);
-        // })
-        //
-        // BABYLON.SceneLoader.ImportMeshAsync(
-        //   "avatar",
-        //   "https://d1a370nemizbjq.cloudfront.net/",
-        //   "c2933994-e012-4be8-ba53-bdb833e23b3e.glb",
-        //   scene
-        // ).then((result) => {
-        //   const avatar = result.meshes[0];
-        //   avatar.scaling = new BABYLON.Vector3(0.25, 0.25, 0.25);
-
-        //   scene.beginAnimation(result.skeletons[0], 0, 100, true, 1);
-        // });
-
-        // BABYLON.SceneLoader.ImportMeshAsync(
-        //   "",
-        //   "../models/",
-        //   "avatar.glb",
-        //   scene,
-        //   function (newMeshes) {
-        //     newMeshes.forEach(function (mesh) {
-        //       mes.rotation = new BABYLON.Vector3(
-        //         BABYLON.Tools.ToRadians(45),
-        //         0,
-        //         0
-        //       );
-        //     });
-        //   }
-        // );
         return scene;
       };
 
