--- a/pages/index.html
+++ b/pages/index.html
@@ -153,11 +153,32 @@
           { width: 128, height: 76 }
         );
         const ufo = new BABYLON.Sprite("ufo", spriteManagerUFO);
-        ufo.playAnimation(0,16,true,125);
+        ufo.playAnimation(0, 16, true, 125);
         ufo.position.y = 5;
         ufo.position.z = 0;
         ufo.width = 2;
         ufo.height = 1;
+
+        // FOUNTAIN
+        const fountainProfile = [
+          new BABYLON.Vector3(0, 0, 0),
+          new BABYLON.Vector3(0.5, 0, 0),
+          new BABYLON.Vector3(0.5, 0.2, 0),
+          new BABYLON.Vector3(0.4, 0.2, 0),
+          new BABYLON.Vector3(0.4, 0.05, 0),
+          new BABYLON.Vector3(0.05, 0.1, 0),
+          new BABYLON.Vector3(0.05, 0.8, 0),
+          new BABYLON.Vector3(0.15, 0.9, 0),
+        ];
+
+        // CREATE LATHE
+        const fountain = BABYLON.MeshBuilder.CreateLathe(
+          "fountain",
+          { shape: fountainProfile, sideOrientation: BABYLON.Mesh.DOUBLESIDE },
+          scene
+        );
+        fountain.position.x = -4;
+        fountain.position.z = -6;
 
         // VALLEY
         const largeGroundMat = new BABYLON.StandardMaterial("largeGroundMat");
