--- a/pages/index.html
+++ b/pages/index.html
@@ -80,19 +80,23 @@
 
         const camera = new BABYLON.ArcRotateCamera(
           "camera",
-          -Math.PI / 2,
-          Math.PI / 2.5,
+          0,
+          Math.PI / 4,
           15,
           new BABYLON.Vector3(0, 0, 0)
         );
-        camera.upperBetaLimit = Math.PI / 2.2;
+        //camera.upperBetaLimit = Math.PI / 2.2;
         camera.attachControl(canvas, true);
-        const light = new BABYLON.HemisphericLight(
-          "light",
-          new BABYLON.Vector3(1, 1, 0)
-        );
 
-        light.intensity = 1;
+        const light = new BABYLON.DirectionalLight(
+          "dir01",
+          new BABYLON.Vector3(0, -1, 1),
+          scene
+        );
+        light.position = new BABYLON.Vector3(0, 50, -100);
+
+        // SHADOW GENERATOR
+        const shadowGenerator = new BABYLON.ShadowGenerator(1024, light);
 
         // GUI
         const adt = BABYLON.GUI.AdvancedDynamicTexture.CreateFullscreenUI("UI");
@@ -150,8 +154,8 @@
           lamp.rotation = BABYLON.Vector3.Zero();
           lamp.rotation.y = -Math.PI / 4;
 
-          lamp3 = lamp.clone("lamp3");
-          lamp3.position.z = -8;
+          // lamp3 = lamp.clone("lamp3");
+          // lamp3.position.z = -8;
 
           lamp1 = lamp.clone("lamp1");
           lamp1.position.x = -8;
@@ -184,6 +188,15 @@
         skyboxMaterial.specularColor = new BABYLON.Color3(0, 0, 0);
         skybox.material = skyboxMaterial;
 
+        // GROUND RECEIVING SHADOWS
+        BABYLON.SceneLoader.ImportMeshAsync(
+          "",
+          "https://assets.babylonjs.com/meshes/",
+          "valleyvillage.glb"
+        ).then(() => {
+          scene.getMeshByName("ground").receiveShadows = true;
+        });
+        
         // VILLAGE
         const groundMat = new BABYLON.StandardMaterial("groundMat");
         groundMat.diffuseTexture = new BABYLON.Texture(
@@ -357,12 +370,6 @@
         largeGround.material = largeGroundMat;
         largeGround.position.y = -0.01;
 
-        BABYLON.SceneLoader.ImportMeshAsync(
-          "",
-          "https://assets.babylonjs.com/meshes/",
-          "valleyvillage.glb"
-        );
-
         // COLLISION
         const wireMat = new BABYLON.StandardMaterial("wireMat");
         wireMat.alpha = 0;
@@ -455,6 +462,9 @@
         ).then((result) => {
           const dude = result.meshes[0];
           dude.scaling = new BABYLON.Vector3(0.008, 0.008, 0.008);
+
+          // SHADOW FOR DUDE
+          shadowGenerator.addShadowCaster(dude, true);
 
           dude.position = new BABYLON.Vector3(1.5, 0, -6.9);
           dude.rotate(
